tests/call_properties/call_properties.exp
Error: A.js:8
  8:   return f();
              ^^^ Cannot return `f()` because string [1] is incompatible with number [2].
  References:
    7: function b(f: { (): string }): number {
                           ^^^^^^ [1]: string
    7: function b(f: { (): string }): number {
                                      ^^^^^^ [2]: number

Error: A.js:13
 13:   return f("hello");
                ^^^^^^^ Cannot call `f` with `"hello"` bound to `x` because string [1] is incompatible with number [2].
  References:
   13:   return f("hello");
                  ^^^^^^^ [1]: string
   12: function c(f: { (x: number): number }): number {
                           ^^^^^^ [2]: number

Error: A.js:18
 18:   return f();
              ^ Cannot call `f` because function [1] requires another argument.
  References:
   17: function d(f: { (x: number): number }): number {
                       ^^^^^^^^^^^^^^^^^^^ [1]: function

Error: A.js:23
 23:   return f();
              ^^^ call of `f`. Callable signature not found in
 23:   return f();
              ^ object type

Error: A.js:29
 29:   return x();
              ^^^ call of `x`. Callable signature not found in
 29:   return x();
              ^ object literal

Error: B.js:5
  5: var b: { (x: number): number } = function (x: number): string { return "hi"; };
                                                            ^^^^^^ Cannot assign function to `b` because in the return value, string [1] is incompatible with number [2].
  References:
    5: var b: { (x: number): number } = function (x: number): string { return "hi"; };
                                                              ^^^^^^ [1]: string
    5: var b: { (x: number): number } = function (x: number): string { return "hi"; };
                             ^^^^^^ [2]: number

Error: B.js:8
  8: var c: { (x: string): string } = function (x: number): string { return "hi"; };
                                                   ^^^^^^ Cannot assign function to `c` because in the first argument, number [1] is incompatible with string [2].
  References:
    8: var c: { (x: string): string } = function (x: number): string { return "hi"; };
                                                     ^^^^^^ [1]: number
    8: var c: { (x: string): string } = function (x: number): string { return "hi"; };
                    ^^^^^^ [2]: string

Error: B.js:11
 11: var d: { (): string } = function (x: number): string { return "hi"; };
                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot assign function to `d` because function [1] requires another argument from function type [2].
  References:
   11: var d: { (): string } = function (x: number): string { return "hi"; };
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]: function
   11: var d: { (): string } = function (x: number): string { return "hi"; };
                ^^^^^^^^^^ [2]: function type

Error: C.js:8
  8:   return x;
              ^ Cannot return `x` because in the return value, string [1] is incompatible with number [2].
  References:
    7: function b(x: { (z: number): string }): (z: number) => number {
                                    ^^^^^^ [1]: string
    7: function b(x: { (z: number): string }): (z: number) => number {
                                                              ^^^^^^ [2]: number

Error: C.js:13
 13:   return x;
              ^ Cannot return `x` because in the first argument, number [1] is incompatible with string [2].
  References:
   12: function c(x: { (z: number): string }): (z: string) => string {
                           ^^^^^^ [1]: number
   12: function c(x: { (z: number): string }): (z: string) => string {
                                                   ^^^^^^ [2]: string

Error: C.js:18
 18:   return x;
              ^ Cannot return `x` because function type [1] requires another argument from function type [2].
  References:
   17: function d(x: { (z: number): string }): () => string {
                       ^^^^^^^^^^^^^^^^^^^ [1]: function type
   17: function d(x: { (z: number): string }): () => string {
                                               ^^^^^^^^^^^^ [2]: function type

Error: C.js:23
 23:   return x;
              ^ object type. This type is incompatible with the expected return type of
 22: function e(x: {}): () => string {
                        ^^^^^^^^^^^^ function type
  Callable property is incompatible:
     22: function e(x: {}): () => string {
                            ^^^^^^^^^^^^ function type. Callable signature not found in
     23:   return x;
                  ^ object type

Error: C.js:33
 33:   return x; // error
              ^ object type. This type is incompatible with the expected return type of
 32: function g(x: {}): Function {
                        ^^^^^^^^ function type
  Callable property is incompatible:
     32: function g(x: {}): Function {
                            ^^^^^^^^ function type. Callable signature not found in
     33:   return x; // error
                  ^ object type

Error: D.js:12
 12:   function (x: number): string { return "hi"; };
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot assign function to `c` because function [1] requires another argument from function type [2].
  References:
   12:   function (x: number): string { return "hi"; };
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]: function
   11: var c: { (): string; (x: number): string } =
                ^^^^^^^^^^ [2]: function type

Error: D.js:21
 21:   return x;
              ^ Cannot return `x` because in the return value, string [1] is incompatible with number [2].
  References:
   20: function e(x: { (): string; (x: number): string }): () => number {
                           ^^^^^^ [1]: string
   20: function e(x: { (): string; (x: number): string }): () => number {
                                                                 ^^^^^^ [2]: number

Error: E.js:2
  2: var a : { someProp: number } = function () {};
                                    ^^^^^^^^^^^^^^ function. This type is incompatible with
  2: var a : { someProp: number } = function () {};
             ^^^^^^^^^^^^^^^^^^^^ object type
  Property `someProp` is incompatible:
      2: var a : { someProp: number } = function () {};
                 ^^^^^^^^^^^^^^^^^^^^ property `someProp` of object type. Property not found in
      2: var a : { someProp: number } = function () {};
                                        ^^^^^^^^^^^^^^ function

Error: F.js:6
  6: var b: { (x: number): number } = (x) => "hi"
                                             ^^^^ Cannot assign function to `b` because in the return value, string [1] is incompatible with number [2].
  References:
    6: var b: { (x: number): number } = (x) => "hi"
                                               ^^^^ [1]: string
    6: var b: { (x: number): number } = (x) => "hi"
                             ^^^^^^ [2]: number

Error: F.js:9
  9: var c: { (x: string): string } = (x) => x.toFixed()
                                               ^^^^^^^ property `toFixed`. Property not found in
  9: var c: { (x: string): string } = (x) => x.toFixed()
                                             ^ String

Error: use_ops.js:4
  4: (a: B); // error HERE and preserve use ops
      ^ A. This type is incompatible with
  4: (a: B); // error HERE and preserve use ops
         ^ B
  Property `p` is incompatible:
      1: type A = { p: {} }
                       ^^ object type. This type is incompatible with
      2: type B = { +p: () => void }
                        ^^^^^^^^^^ function type
      Callable property is incompatible:
          2: type B = { +p: () => void }
                            ^^^^^^^^^^ function type. Callable signature not found in
          1: type A = { p: {} }
                           ^^ object type


Found 19 errors
